Read groups from oauth provider and allow roles to groups
